--- a/app/src/main/res/layout/race_item.xml
+++ b/app/src/main/res/layout/race_item.xml
@@ -9,13 +9,14 @@
         android:id="@+id/race_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/race_distance"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="16sp" />
 
 
     <LinearLayout
