--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#020209"
-    tools:context=".view.MainActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <android.widget.Button
+        android:id="@+id/races_list_button"
+        android:layout_width="370dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/entrenamiento_fuerza_corredores"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="Races"
+        android:textColor="#0B0000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="match_parent"
-            android:layout_height="780dp"
-            app:srcCompat="@drawable/zapatillas03" />
-    </LinearLayout>
+    <android.widget.Button
+        android:id="@+id/registrations_list_button"
+        android:layout_width="370dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/calendario"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="My Registrations"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/races_list_button" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center|top|center_vertical"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout">
+    <android.widget.Button
+        android:id="@+id/fav_races_list_button"
+        android:layout_width="370dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/medallas"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="Favourites"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/registrations_list_button" />
 
-        <Button
-            android:id="@+id/races_list_button"
-            android:layout_width="371dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#ECD0FE"
-            android:gravity="center"
-            android:text="RACES"
-            android:textColor="#5C1349"
-            app:icon="@android:drawable/ic_menu_month"
-            app:iconTint="#5C1349" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="414dp"
+        android:layout_height="221dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/entrenamiento_maraton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fav_races_list_button" />
 
-        <Button
-            android:id="@+id/registrations_list_button"
-            android:layout_width="341dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#ECD0FE"
-            android:gravity="center"
-            android:text="MY REGISTRATIONS"
-            android:textColor="#5C1349"
-            app:icon="@android:drawable/ic_menu_my_calendar"
-            app:iconTint="#5C1349" />
-
-        <Button
-            android:id="@+id/fav_races_list_button"
-            android:layout_width="283dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#ECD0FE"
-            android:gravity="center"
-            android:text="FAVOURITES"
-            android:textColor="#5C1349"
-            app:icon="@android:drawable/star_off"
-            app:iconTint="#5C1349" />
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
