--- a/app/src/main/res/layout/activity_user_details_view.xml
+++ b/app/src/main/res/layout/activity_user_details_view.xml
@@ -18,14 +18,17 @@
 
             <TextView
                 android:id="@+id/textViewName"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Name" />
+                android:text="Name"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_user_name_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -37,14 +40,17 @@
 
             <TextView
                 android:id="@+id/textViewSurname"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Surname" />
+                android:text="Surname"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_user_surname_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -56,14 +62,17 @@
 
             <TextView
                 android:id="@+id/textViewTelephone"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Telephone" />
+                android:text="Telephone"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_user_telephone_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -75,18 +84,28 @@
 
             <TextView
                 android:id="@+id/textBirthDate"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Birth Date" />
+                android:text="Birth Date"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_user_birthdate_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="240dp"
+        android:layout_height="259dp"
+        android:alpha="0.1"
+        app:srcCompat="@drawable/corredor" />
 </LinearLayout>
+
